# best-of-life-ranking-system

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  WHITEPAPER.md  docker-compose.yml  pyproject.toml
config/: overrides.yaml  topics.seed.yaml  weights.yaml
ranking/: __init__.py  catalog.py  collect.py  config.py  db.py  discover.py  export.py  models.py  photos.py  place_types.py  run.py  score.py  slugs.py  strengths.py  transform.py
ranking/sources/: __init__.py  _http.py  ai_search.py  firecrawl.py  google_places.py  reddit.py  semrush.py  web_search.py  yelp.py
sql/: 001_dwh.sql  002_strengths.sql  003_photos.sql
tests/: test_score.py  test_transform.py
