[project]
name = "ontario-ranking"
version = "0.1.0"
description = "Local monthly ranking pipeline for Best of Ontario local businesses"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "vaderSentiment>=3.3.2",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ranking = "ranking.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ranking"]

[tool.pytest.ini_options]
testpaths = ["tests"]
